--- a/package.json
+++ b/package.json
@@ -16,18 +16,23 @@
     "@clerk/nextjs": "^6.6.0",
     "@hono/clerk-auth": "^2.0.0",
     "@hono/zod-validator": "^0.4.1",
+    "@hookform/resolvers": "^3.9.1",
     "@neondatabase/serverless": "^0.10.4",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.62.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.37.0",
+    "drizzle-zod": "^0.5.1",
     "hono": "^4.6.12",
     "lucide-react": "^0.464.0",
     "next": "14.2.19",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.2",
     "react-use": "^17.5.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
