--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "hono": "^4.6.12",
     "lucide-react": "^0.464.0",
     "next": "14.2.19",
+    "next-themes": "^0.4.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
     "react-use": "^17.5.1",
+    "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.19.2",
