--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
     "next": "14.2.19",
     "next-themes": "^0.4.4",
     "react": "^18",
+    "react-countup": "^6.5.3",
     "react-currency-input-field": "^3.9.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
+    "react-icons": "^5.4.0",
     "react-papaparse": "^4.4.0",
     "react-select": "^5.8.3",
     "react-use": "^17.5.1",
