--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "lucide-react": "^0.464.0",
     "next": "14.2.19",
     "next-themes": "^0.4.4",
+    "query-string": "^9.1.1",
     "react": "^18",
     "react-countup": "^6.5.3",
     "react-currency-input-field": "^3.9.0",
