--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "lucide-react": "^0.464.0",
     "next": "14.2.19",
     "next-themes": "^0.4.4",
+    "plaid": "^30.0.0",
     "query-string": "^9.1.1",
     "react": "^18",
     "react-countup": "^6.5.3",
@@ -48,6 +49,7 @@
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.4.0",
     "react-papaparse": "^4.4.0",
+    "react-plaid-link": "^3.6.1",
     "react-select": "^5.8.3",
     "react-use": "^17.5.1",
     "recharts": "^2.14.1",
